--- a/configs/ub_teacher_baseline/faster_rcnn_R_50_FPN_sup10_run1.yaml
+++ b/configs/ub_teacher_baseline/faster_rcnn_R_50_FPN_sup10_run1.yaml
@@ -17,8 +17,8 @@ SOLVER:
   LR_SCHEDULER_NAME: "WarmupMultiStepLR"
   STEPS: (179990, 179995)
   MAX_ITER: 180000
-  IMG_PER_BATCH_LABEL: 32
-  IMG_PER_BATCH_UNLABEL: 32
+  IMG_PER_BATCH_LABEL: 8
+  IMG_PER_BATCH_UNLABEL: 8
   BASE_LR: 0.01
 DATALOADER:
   SUP_PERCENT: 10.0
@@ -34,6 +34,10 @@ SEMISUPNET:
   BURN_UP_STEP: 2000
   EMA_KEEP_RATE: 0.9996
   UNSUP_LOSS_WEIGHT: 4.0
+CONSISTENCY:
+  ROI_LEVEL: False
+WEIGHT_SCHEDULE:
+  REWEIGHT: False
 TEST:
   EVAL_PERIOD: 1000
   EVALUATOR: "COCOeval"
