--- a/configs/coco_full_method/coco_1pct.yaml
+++ b/configs/coco_full_method/coco_1pct.yaml
@@ -17,11 +17,13 @@ SOLVER:
   LR_SCHEDULER_NAME: "WarmupMultiStepLR"
   STEPS: (179990, 179995)
   MAX_ITER: 180000
-  IMG_PER_BATCH_LABEL: 32
-  IMG_PER_BATCH_UNLABEL: 32
+  IMG_PER_BATCH_LABEL: 8
+  IMG_PER_BATCH_UNLABEL: 8
   BASE_LR: 0.01
+  AMP:
+    ENABLED: True
 DATALOADER:
-  SUP_PERCENT: 5.0
+  SUP_PERCENT: 1.0
   RANDOM_DATA_SEED: 1
 DATASETS:
   CROSS_DATASET: False
@@ -31,9 +33,29 @@ SEMISUPNET:
   Trainer: "ubteacher"
   BBOX_THRESHOLD: 0.7
   TEACHER_UPDATE_ITER: 1
-  BURN_UP_STEP: 2000
+  BURN_UP_STEP: 180000
   EMA_KEEP_RATE: 0.9996
   UNSUP_LOSS_WEIGHT: 4.0
+  SUPERVISED_CROSS_LEVEL: False
+  PSEUDO_LABEL_CROSS_LEVEL: False
+CONSISTENCY:
+  ROI_LEVEL: True
+  APPLY_CLS: True
+  APPLY_REG: False
+  PAD_TYPE: ramp-to-proposal # ratio or min_proposal or ramnp-to-ratio
+  MIN_PROPOSAL: 256
+  RAMP_END: 5000
+  CLS: KL
+  REG: SmoothL1
+  START: 2000
+  END: 180000
+
+WEIGHT_SCHEDULE:
+  T1: 180000
+  T2: 280000
+  W1: 0.3
+  W2: 0.1
+  REWEIGHT: True
 TEST:
-  EVAL_PERIOD: 1000
+  EVAL_PERIOD: 3000
   EVALUATOR: "COCOeval"
